--- a/jste/package.json
+++ b/jste/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jste",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "jste - new modern java sript template engine",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,9 @@
     "template",
     "js"
   ],
+  "bugs":{
+    "url": "https://github.com/AlexStrNik/JSTE/issues"
+  },
   "author": "alexstrnik",
   "license": "ISC"
 }
