--- a/jste/package.json
+++ b/jste/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jste",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "jste - new modern java sript template engine",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,5 @@
   },
   "author": "alexstrnik",
   "license": "ISC",
-  "dependencies": {
-  }
+  "dependencies": {}
 }
